--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-body {
-    margin: 0px;
+.body {
+    margin: 10px;
+    color: rgb(38, 31, 31);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -26,11 +27,12 @@ body {
 .links {
 
     text-decoration: none;
-    padding: 0.5rem 0.5rem;
+    padding: 0.5rem;
+    margin: 0rem 1rem;
 }
 
 .primary-link {
-    
+
     background-color: var(--primary-color);
     border-radius: 0.5rem;
     color: whitesmoke;
@@ -58,12 +60,6 @@ hr {
 
 /** nav **/
 
-.nav-link {
-    background-color: var(--primary-color);
-    border-radius: 0.5rem;
-    color: whitesmoke;
-}
-
 .navigation {
     background-color: var(--secondary-color);
     padding: 0.25rem 0.25rem;
@@ -90,7 +86,7 @@ hr {
 }
 
 .hero .hero-image {
-    max-width: 300px;
+    max-width: 500px;
     display: block;
     margin: auto;
 }
@@ -103,30 +99,31 @@ hr {
 }
 
 /** section **/
-.section{
+.section {
     padding: 2rem;
 }
-.section h3 {
+
+.section-h3 {
     text-align: center;
-  
+
 }
 
-.offwhite-section{
+.offwhite-section {
     background-color: rgb(246, 243, 243);
 }
 
 /** footer **/
-.footer{
+.footer {
     background-color: var(--secondary-color);
-    padding: 2rem 1rem ;
+    padding: 2rem 1rem;
     border-top-right-radius: 2rem;
 }
-.social-links{
+
+.social-links {
     text-align: center;
+    font-weight: 600;
 }
 
-.footer-ul{
+.footer-ul {
     padding-inline-start: 0px;
 }
-
-
